--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -1,7 +1,6 @@
 @use '../../partials/variables' as *;
 
 .about {
-  padding-top: 17rem;
   display: flex;
   flex-direction: column;
   align-items: center;
