--- a/client/src/pages/Account/Account.scss
+++ b/client/src/pages/Account/Account.scss
@@ -2,8 +2,7 @@
 @use '../../partials/mixins' as *;
 
 .account {
-  padding-top: 16.8rem;
-  padding-top: 16.8rem;
+  padding-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
