--- a/client/src/pages/Book/Book.scss
+++ b/client/src/pages/Book/Book.scss
@@ -2,7 +2,7 @@
 @use '../../partials/mixins' as *;
 
 .book {
-  padding-top: 16.8rem;
+  padding-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
