--- a/client/src/pages/Home/Home.scss
+++ b/client/src/pages/Home/Home.scss
@@ -1,6 +1,4 @@
 .home {
-  padding-top: 16.8rem;
-
   &__hero {
     max-width: 100vw;
   }
